prices-updated-api

--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -4,7 +4,7 @@
     "EnableSessions": true
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=atlasdb1;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-16-02-2026;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -13,14 +13,17 @@
     }
   },
   "Jwt": { "Key": "__SET_VIA_ENV__" },
-  "Razorpay": { "KeyId": "__SET_VIA_ENV_OR_AZURE__", "KeySecret": "__SET_VIA_ENV_OR_AZURE__" },
+  "Razorpay": {
+    "KeyId": "rzp_test_SBxu0MfXbn5G6b",
+    "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
+  },
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "__SET_VIA_ENV_OR_AZURE__",
-    "Password": "__SET_VIA_ENV_OR_AZURE__",
-    "FromEmail": "__SET_VIA_ENV_OR_AZURE__",
+    "Username": "atlashomeskphb@gmail.com",
+    "Password": "fvclbarlzxxzzvtq",
+    "FromEmail": "atlashomeskphb@gmail.com",
     "FromName": "Atlas Homes",
     "EnableSsl": true
   }
-}
+  }
