--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=atlasdb-16-02-2026;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-7;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AzureServiceBus": {
     "ConnectionString": "",
