--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -4,7 +4,7 @@
     "EnableSessions": true
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=atlasdb-latest1;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-7;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
