--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -1,8 +1,4 @@
 {
-  "AzureServiceBus": {
-    "ConnectionString": "",
-    "EnableSessions": true
-  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-7;Trusted_Connection=True;TrustServerCertificate=True;"
   },
@@ -12,7 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Jwt": { "Key": "__SET_VIA_ENV__" },
+  "Jwt": {
+    "Key": "TemporarySecretKey12345AtlasHomes"
+  },
   "Razorpay": {
     "KeyId": "rzp_test_SBxu0MfXbn5G6b",
     "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
@@ -25,5 +23,10 @@
     "FromEmail": "atlashomeskphb@gmail.com",
     "FromName": "Atlas Homes",
     "EnableSsl": true
+  },
+  "WhatsApp": {
+    "AccessToken": "",
+    "PhoneNumberId": "",
+    "BaseUrl": ""
   }
-  }
+}
