--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -2,17 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-7;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "AzureServiceBus": {
-    "ConnectionString": "",
-    "EnableSessions": true,
-    "TopicBookingEvents": "booking.events",
-    "TopicStayEvents": "stay.events",
-    "TopicWhatsAppInbound": "whatsapp.inbound",
-    "SubscriptionNotifications": "notifications",
-    "SubscriptionScheduler": "scheduler",
-    "SubscriptionConversationOrchestrator": "conversation-orchestrator",
-    "MaxConcurrentSessions": 4
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -37,6 +26,11 @@
     "FromEmail": "__SET_VIA_ENV_OR_AZURE__",
     "FromName": "Atlas Homes",
     "EnableSsl": true
+  },
+  "WhatsApp": {
+    "AccessToken": "__SET_VIA_ENV_OR_AZURE__",
+    "PhoneNumberId": "__SET_VIA_ENV_OR_AZURE__",
+    "BaseUrl": "https://graph.facebook.com/v22.0"
   },
   "AzureBlob": {
     "ConnectionString": "__SET_VIA_ENV_OR_AZURE__"
